[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/Bewohner/Neighbour.gd" type="Script" id=1]
[ext_resource path="res://src/Bewohner/States/Dropping.gd" type="Script" id=2]
[ext_resource path="res://src/Bewohner/States/Running.gd" type="Script" id=3]
[ext_resource path="res://src/Bewohner/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://assets/neighbourWithoutOutlines.png" type="Texture" id=5]
[ext_resource path="res://src/Bewohner/States/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://assets/DotGothic16-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/Bewohner/States/Picking.gd" type="Script" id=8]
[ext_resource path="res://src/Bewohner/States/ExitingDoor.gd" type="Script" id=9]
[ext_resource path="res://src/Bewohner/States/ChangingFloor.gd" type="Script" id=10]
[ext_resource path="res://src/Bewohner/States/EnteringDoor.gd" type="Script" id=11]
[ext_resource path="res://src/Bewohner/States/BeingInFlat.gd" type="Script" id=12]
[ext_resource path="res://src/Bewohner/EventManager.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Bewohner/States/Talking.gd" type="Script" id=14]
[ext_resource path="res://src/Bewohner/InputManagerKI.gd" type="Script" id=15]
[ext_resource path="res://assets/sfx/schritte-bootsteppich.wav" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 16 )

[sub_resource type="Animation" id=3]
resource_name = "dropping"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "enteringDoor"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "exitingDoor"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idleTrash"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=8]
resource_name = "picking"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=9]
resource_name = "running"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("StepsSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.41,
"start_offset": 0.0,
"stream": ExtResource( 17 )
} ],
"times": PoolRealArray( -0.6 )
}

[sub_resource type="Animation" id=10]
resource_name = "runningTrash"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="DynamicFont" id=11]
size = 8
font_data = ExtResource( 7 )

[node name="Neighbour" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
fSpeed = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
inital_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Dropping" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Picking" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="EnteringDoor" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="ExitingDoor" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="ChangingFloor" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Talking" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="BeingInFlat" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
hframes = 6
vframes = 4
frame = 6

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/dropping = SubResource( 3 )
anims/enteringDoor = SubResource( 4 )
anims/exitingDoor = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/idleTrash = SubResource( 7 )
anims/picking = SubResource( 8 )
anims/running = SubResource( 9 )
anims/runningTrash = SubResource( 10 )

[node name="EvtCountdownTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -18.6663
margin_top = -46.6561
margin_right = 19.3337
margin_bottom = -33.6561
custom_fonts/font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventManager" parent="." instance=ExtResource( 13 )]

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 15 )

[node name="StepsSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Dropping" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Picking" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/EnteringDoor" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/ExitingDoor" method="_on_AnimationPlayer_animation_finished"]
